2008-11-01	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-global.c: Fix warning leading to crash on
	  amd64 due to missing include (bug 4510).

2008-10-31	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in,xfce4-session/xfsm-manager.c: Change the
	  detection of linux/ioprio.h, as the header is apparently
	  present but broken on some systems (bug 4515).

2008-10-31	Jannis Pohlmann <jannis@xfce.org>

	* settings/xfce-session-settings.desktop.in,
	  settings/xfce4-session-settings.glade: Change "Sessions and Startup" back
	  to "Session and Startup".

2008-10-31	Jannis Pohlmann <jannis@xfce.org>

	* settings/main.c, settings/xfce-session-settings.desktop.in,
	  xfce4-session-settings.glade: Make settings dialog title/description
	  consistent. Properly stop startup notification when being plugged
	  into the settings manager.

2008-10-23	Brian Tarricone <bjt23@cornell.edu>

	* {settings,xfce4-session}/Makefile.am: Fix MAINTAINER_MODE
	  build with glib 2.12.

2008-10-22	Brian Tarricone <bjt23@cornell.edu>

	* settings/xfce4-session-settings.glade: Remove 'remove' button
	  and add a 'save session' button.  Add a session save progress
	  dialog.
	* settings/session-editor.c: Add the ability to save the
	  session from the dialog.

2008-10-22	Brian Tarricone <bjt23@cornell.edu>

	* settings/session-editor.c: Validate the value for the
	  restart style hint to avoid a possible crash.  Sort the
	  client list first by priority, then by program name.  Allow
	  the user to change the priority.

2008-10-22	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in: Update bug report address to http://bugs.xfce.org/.

2008-10-22	Brian Tarricone <bjt23@cornell.edu>

	* settings/session-editor.c: Display PID in session editor.
	  Display restart style in session editor, and allow user to
	  change the value (is there a way to actually make it look
	  like a combo box?).

2008-10-22	Brian Tarricone <bjt23@cornell.edu>
