@@ -1,5 +1,10 @@
 2008-11-01	Brian Tarricone <bjt23@cornell.edu>
 
+	* engines/simple/simple.c: Use GtkFileChooserButton instead of
+	  GtkEntry+GtkButton for selecting custom image in simple engine.
+
+2008-11-01	Brian Tarricone <bjt23@cornell.edu>
+
 	* xfce4-session/xfsm-global.c: Fix warning leading to crash on
 	  amd64 due to missing include (bug 4510).
 
